--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,8 @@ BOT_TOKEN=your_telegram_bot_token_here
 # TwelveData API Key (get from https://twelvedata.com/)
 TWELVEDATA_KEY=your_twelvedata_api_key_here
 
+# Render external URL (set automatically by Render)
+RENDER_EXTERNAL_URL=your_render_external_url_here
+
 # Port for the server (optional, defaults to 3000)
 PORT=3000
