--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BOT_TOKEN="8434458904:AAGhzbnvNnYt13NzcsfZHdiVHYs6FHgYWa4"
-TWELVEDATA_KEY="0818b8bf36354d868b43c2edac21a6c5"
+TWELVEDATA_KEY=f2e4da333d4644d88f773199d2445c07
+ALPHA_VANTAGE_API_KEY=A8CP9A23TM28UPZZ
